--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://HiFiveJazz.github.io/mira-valentines-day-2025",
+  "homepage": "https://hifivejazz.github.io/mira-valentines-day-2025/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
