--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -30,4 +31,3 @@
     "vite": "^6.0.5"
   }
 }
-
