--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "typewriter-effect": "^2.21.0",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
