--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.120.5",
     "canvas-confetti": "^1.9.3",
     "react": "^18.3.1",
