--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.120.5",
     "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.7",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "typewriter-effect": "^2.21.0",
