--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-three/drei": "^9.120.5",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
+    "fs-extra": "^11.3.0",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "sharp": "^0.33.5",
     "typewriter-effect": "^2.21.0",
     "vanilla-tilt": "^1.8.1"
   },
