--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.7",
     "fs-extra": "^11.3.0",
+    "gsap": "^3.12.7",
     "object-hash": "^3.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
