--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "miraandjazz.com",
+  "homepage": "jazzmems.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
